<resources>
    <string name="app_name">Minimal Weather</string>

    <!-- Settings Fragment -->
    <!-- Preference Titles -->
    <string name="ui_header">User Interface Settings</string>

    <!-- User Interface Titles -->
    <string name="language_setting_title">Weather description language</string>
    <string name="measurement_mode">Measurement Mode</string>
    <string name="night_mode">Night Mode</string>


    <!-- Days of the Week -->
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>


    <!-- pollution -->
    <string name="pollution">pollution</string>
    <string name="pollution_good">pollution : good</string>
    <string name="pollution_fair">pollution : fair</string>
    <string name="pollution_moderate">pollution : moderate</string>
    <string name="pollution_poor">pollution : poor</string>
    <string name="pollution_very_poor">pollution : very poor</string>


    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="shown">Shown</string>
    <string name="location">Your Location</string>
    <string name="weather">Weather</string>
    <string name="earth">Earth</string>
    <string name="settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="retry_failed">Retry Failed.</string>
    <string name="internet_connection_could_not_be_established">Internet connection could not be established.</string>
    <string name="permissions_granted">Permissions granted.</string>
    <string name="permissions_denied">Permissions denied.</string>
    <string name="error_occurred">Error occurred!</string>
    <string name="close_app">Close App</string>
    <string name="permissions_are_not_granted">Permissions did not granted!</string>
    <string name="please_grant_the_necessary_permissions_in_the_application_settings_otherwise_you_can_close_the_app">Please grant the necessary permissions in the application settings, otherwise you can close the application</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="climate_changes">Weather changes</string>
    <string name="notification_channel_description">You will be notified of critical weather changes or sometimes weather informations.</string>
    <string name="weather_emergency">"Weather Emergency : "</string>
    <string name="weather_emergency_description_part_one">"The weather conditions will be "</string>
    <string name="weather_emergency_description_part_two">" in the future!!!"</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="city_name_in_English">city name in English…</string>
    <string name="developer">Developer</string>
    <string name="ali_imanifard">Ali Imanifard</string>
    <string name="ali_imanifard_email" translatable="false">aliimanifard13@gmail.com</string>
    <string name="loading">Loading</string>
    <string name="time_format_twenty_four">Time Format : 24-hour</string>
    <string name="notifications">Notifications</string>
    <string name="email_subject">Regarding The Minimal Weather Application</string>
    <string name="application_not_found">Application not found.</string>


</resources>